// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Given a Login component When is invoked Then it is renders correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#044AFD",
      "flex": 1,
      "justifyContent": "center",
      "padding": 24,
      "paddingTop": 50,
    }
  }
>
  <Image
    source={
      Object {
        "uri": "https://i.ibb.co/MVc000Y/Logo-transparent-Patxi.png",
      }
    }
    style={
      Object {
        "alignItems": "flex-start",
        "height": 250,
        "width": 250,
      }
    }
  />
  <Text
    style={
      Object {
        "color": "white",
        "fontSize": 25,
        "fontWeight": "bold",
        "paddingVertical": 20,
      }
    }
  />
  <TextInput
    allowFontScaling={true}
    onChangeText={[Function]}
    placeholder="Email"
    rejectResponderTermination={true}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "white",
        "borderRadius": 25,
        "fontSize": 20,
        "height": 50,
        "justifyContent": "center",
        "marginVertical": 5,
        "paddingLeft": 20,
        "width": 300,
      }
    }
    underlineColorAndroid="transparent"
  />
  <TextInput
    allowFontScaling={true}
    onChangeText={[Function]}
    placeholder="Password"
    rejectResponderTermination={true}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "white",
        "borderRadius": 25,
        "fontSize": 20,
        "height": 50,
        "justifyContent": "center",
        "marginVertical": 5,
        "paddingLeft": 20,
        "width": 300,
      }
    }
    underlineColorAndroid="transparent"
  />
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "white",
        "borderRadius": 25,
        "height": 50,
        "justifyContent": "center",
        "marginTop": 30,
        "opacity": 1,
        "width": 300,
      }
    }
  >
    <Text
      style={
        Object {
          "fontFamily": "Cochin",
          "fontSize": 25,
        }
      }
    >
      Acceder
    </Text>
  </View>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "height": 50,
        "justifyContent": "center",
        "opacity": 1,
        "width": 300,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "white",
        }
      }
    >
      Crear una cuenta
    </Text>
  </View>
</View>
`;

exports[`Given a Login component renders correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#044AFD",
      "flex": 1,
      "justifyContent": "center",
      "padding": 24,
      "paddingTop": 50,
    }
  }
>
  <Image
    source={
      Object {
        "uri": "https://i.ibb.co/MVc000Y/Logo-transparent-Patxi.png",
      }
    }
    style={
      Object {
        "alignItems": "flex-start",
        "height": 250,
        "width": 250,
      }
    }
  />
  <Text
    style={
      Object {
        "color": "white",
        "fontSize": 25,
        "fontWeight": "bold",
        "paddingVertical": 20,
      }
    }
  />
  <TextInput
    allowFontScaling={true}
    onChangeText={[Function]}
    placeholder="Email"
    rejectResponderTermination={true}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "white",
        "borderRadius": 25,
        "fontSize": 20,
        "height": 50,
        "justifyContent": "center",
        "marginVertical": 5,
        "paddingLeft": 20,
        "width": 300,
      }
    }
    testID="emailInput"
    underlineColorAndroid="transparent"
    value=""
  />
  <TextInput
    allowFontScaling={true}
    onChangeText={[Function]}
    placeholder="Password"
    rejectResponderTermination={true}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "white",
        "borderRadius": 25,
        "fontSize": 20,
        "height": 50,
        "justifyContent": "center",
        "marginVertical": 5,
        "paddingLeft": 20,
        "width": 300,
      }
    }
    testID="passwordInput"
    underlineColorAndroid="transparent"
    value=""
  />
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "white",
        "borderRadius": 25,
        "height": 50,
        "justifyContent": "center",
        "marginTop": 30,
        "opacity": 1,
        "width": 300,
      }
    }
    testID="login"
  >
    <Text
      style={
        Object {
          "fontFamily": "Cochin",
          "fontSize": 25,
        }
      }
    >
      Acceder
    </Text>
  </View>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "height": 50,
        "justifyContent": "center",
        "opacity": 1,
        "width": 300,
      }
    }
    testID="register"
  >
    <Text
      style={
        Object {
          "color": "white",
        }
      }
    >
      Crear una cuenta
    </Text>
  </View>
</View>
`;

exports[`Login Form renders correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#044AFD",
      "flex": 1,
      "justifyContent": "center",
      "padding": 24,
      "paddingTop": 50,
    }
  }
>
  <Image
    source={
      Object {
        "uri": "https://i.ibb.co/MVc000Y/Logo-transparent-Patxi.png",
      }
    }
    style={
      Object {
        "alignItems": "flex-start",
        "height": 250,
        "width": 250,
      }
    }
  />
  <Text
    style={
      Object {
        "color": "white",
        "fontSize": 25,
        "fontWeight": "bold",
        "paddingVertical": 20,
      }
    }
  />
  <TextInput
    allowFontScaling={true}
    onChangeText={[Function]}
    placeholder="Email"
    rejectResponderTermination={true}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "white",
        "borderRadius": 25,
        "fontSize": 20,
        "height": 50,
        "justifyContent": "center",
        "marginVertical": 5,
        "paddingLeft": 20,
        "width": 300,
      }
    }
    underlineColorAndroid="transparent"
  />
  <TextInput
    allowFontScaling={true}
    onChangeText={[Function]}
    placeholder="Password"
    rejectResponderTermination={true}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "white",
        "borderRadius": 25,
        "fontSize": 20,
        "height": 50,
        "justifyContent": "center",
        "marginVertical": 5,
        "paddingLeft": 20,
        "width": 300,
      }
    }
    underlineColorAndroid="transparent"
  />
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "white",
        "borderRadius": 25,
        "height": 50,
        "justifyContent": "center",
        "marginTop": 30,
        "opacity": 1,
        "width": 300,
      }
    }
  >
    <Text
      style={
        Object {
          "fontFamily": "Cochin",
          "fontSize": 25,
        }
      }
    >
      Acceder
    </Text>
  </View>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "height": 50,
        "justifyContent": "center",
        "opacity": 1,
        "width": 300,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "white",
        }
      }
    >
      Crear una cuenta
    </Text>
  </View>
</View>
`;
